--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,72 @@
     box-sizing: border-box;
 }
 
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Outfit', sans-serif;
+}
 
+.header{
+    background-color: #333;
+    color: white;
+    padding: 10px;
+    text-align: center;
+    border-bottom: 1px solid #ddd;
+}
+.main-container {
+    display: flex;
+    flex-direction: row;
+    justify-content:space-around;
+    width: 100%;
+    gap: 20px;
+}
 
+.book-list-container {
+    margin: 20px;
+    flex: 0 0 60%; 
+}
+
+.selected-book-area {
+    flex: 0 0 30%;
+    border: 1px solid #ddd;
+    padding: 10px;
+}
+
+.table{
+    width: 100%;
+    border-collapse: collapse;
+    text-align: left;
+}
+.table a{
+    line-height:3.2;
+}
+.table a:hover{
+    color:dodgerblue;
+    cursor:pointer;
+    
+}
 .table {
     display: grid;
-    grid-template-columns: 5% 40% 25% 10% 10% 10%;
+    grid-template-columns: 10% 40% 25% 15% 10%;
 }
- 
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.pagination a {
+    margin: 0 5px;
+    padding: 5px 10px;
+    background-color: #333;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+.pagination a:hover {
+    background-color: dodgerblue;
+    cursor: pointer;
+}
