--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,20 @@ body {
     font-family: 'Outfit', sans-serif;
 }
 
+button {
+    padding: 10px 20px;
+    margin-bottom: 10px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    background-color:dodgerblue;
+    color: white;
+    font-family: 'Outfit', sans-serif;
+}
+
+button:hover {
+    background-color: darkblue;
+}
 .header{
     background-color: #333;
     color: white;
@@ -70,4 +84,107 @@ body {
 .pagination a:hover {
     background-color: dodgerblue;
     cursor: pointer;
+}
+
+/* Pop up window classes */
+.pop-up-window {
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    position: fixed; 
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.pop-up-content {
+    display: flex;
+    flex-direction: column;
+    background-color: #fefefe;
+    padding: 20px;
+    width: 60%;
+    max-width: 500px;
+    max-height: 80%;
+    border-radius: 15px;
+    overflow-y: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.pop-up-content h2{
+    font-size: 24px;
+    margin: 0;
+}
+
+form{
+    display:flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+form input[type="text"] {
+    border: 1px solid #ccc;
+    padding: 10px;
+    width: 100%; 
+    border-radius: 5px; 
+    font-family: 'Outfit', sans-serif;
+}
+form input[type="number"] {
+    border: 1px solid #ccc;
+    padding: 10px;
+    width: 100%; 
+    border-radius: 5px; 
+    font-family: 'Outfit', sans-serif;
+}
+
+.close {
+    align-self: flex-end;
+    padding: 5px 20px;
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* stars style */
+.stars {
+    background: #fff;
+    margin: 0 1rem;
+}
+
+.star {
+  font-size: 5vh;
+  cursor: pointer;
+}
+ 
+.one {
+  color: rgb(255, 0, 0);
+}
+ 
+.two {
+  color: rgb(255, 106, 0);
+}
+ 
+.three {
+  color: rgb(251, 255, 120);
+}
+ 
+.four {
+  color: rgb(255, 255, 0);
+}
+ 
+.five {
+  color: rgb(24, 159, 14);
 }
