--- a/styles.css
+++ b/styles.css
@@ -25,10 +25,35 @@ button:hover {
 .header{
     background-color: #333;
     color: white;
-    padding: 10px;
     text-align: center;
     border-bottom: 1px solid #ddd;
 }
+
+.header h1 {
+    font-size: 2rem;
+    margin: 0;
+    padding: 20px;
+}
+
+.bar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    background-color: #555;
+}
+
+.bar a {
+    color: white;
+    text-decoration: none;
+    padding: 10px;
+}
+
+.bar a:hover {
+    color:deepskyblue;
+    cursor: pointer;
+}
+
 .main-container {
     display: flex;
     flex-direction: row;
@@ -90,6 +115,7 @@ button:hover {
 }
 
 .table{
+    padding: 0 0 0 20px;
     width: 100%;
     border-collapse: collapse;
     text-align: left;
@@ -106,7 +132,17 @@ button:hover {
     display: grid;
     grid-template-columns: 10% 40% 25% 15% 10%;
 }
-
+.book-list-header{
+    font-weight: bold;
+    padding: 20px;
+    background-color:cornflowerblue;
+    color: #333;
+}
+.sort-button:hover{
+    color: #ffffff;
+    cursor: pointer;
+    
+}
 .pagination {
     display: flex;
     justify-content: center;
@@ -127,8 +163,36 @@ button:hover {
     cursor: pointer;
 }
 
+.tooltip-btn {
+    position: relative;
+    cursor: pointer;
+}
+
+.tooltip-text {
+    visibility: hidden;
+    width: 120px;
+    background-color:#555;
+    color: #fff;
+    text-align: center;
+    border-radius: 5px;
+    padding: 5px;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%; /* Positions the tooltip above the text */
+    transform: translateX(-50%);
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    font-size: 12px;
+}
+
+.tooltip-btn:hover .tooltip-text {
+    visibility: visible;
+    opacity: 1;
+}
+
 /* Pop up window classes */
 .pop-up-window {
+    visibility: hidden;
     display: flex;
     justify-content: center;
     align-items: center; 
